--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
-  <link rel="stylesheet" href="/styles/mainpage.css">
+  <link rel="stylesheet" href="/todo-list/styles/mainpage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>To Do List</title>
 </head>
@@ -21,14 +21,35 @@
           <h3>High</h3>
         </div>
         <div class="task-icons">
-          <img src="/assets/icons/edit-task-icon.svg" alt="Edit Task">
-          <img src="/assets/icons/delete-task-icon.svg" alt="Edit Task">
+          <img src="/todo-list/assets/icons/edit-task-icon.svg" alt="Edit Task">
+          <img src="/todo-list/assets/icons/delete-task-icon.svg" alt="Delete Task">
         </div>
       </div>
+
+      <div class="add-task-container">
+        <img id="add-task" src="/todo-list/assets/icons/add-task-icon.svg" alt="Add Task">
+      </div>
+    </div>
+
+    <!-- Modal for adding tasks -->
+    <div id="add-task-modal" class="add-task-modal">
+      <p>TASK NAME</p>
+      <input type="text" placeholder="Water plants">
+      <p>TASK DATE</p>
+      <!-- Add minimum and maximum dates. Min for now, max for future. -->
+      <input type="date" name="task-date" placeholder="20 Feb 2025">
+      <p>TASK SEVERITY</p>
+      <select name="task-severity" id="task-severity">
+        <option value="" class="task-options-placeholder">Select severity &ast;</option>
+        <option value="high-severity">High</option>
+        <option value="medium-severity">Medium</option>
+        <option value="low-severity">Low</option>
+      </select>
+      <button id="add-task-button" class="add-task-button">ADD TASK</button>
     </div>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src="/scripts/mainpage.js" type="module"></script>
+  <script src="/todo-list/scripts/mainpage.js" type="module"></script>
 </body>
 </html>
