--- a/mainpage.html
+++ b/mainpage.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
+  <link rel="stylesheet" href="/todo-list/styles/index.css">
   <link rel="stylesheet" href="/todo-list/styles/mainpage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>To Do List</title>
@@ -32,21 +33,20 @@
     </div>
 
     <!-- Modal for adding tasks -->
-    <div id="add-task-modal" class="add-task-modal">
+    <form method="dialog" id="add-task-modal" class="add-task-modal">
       <p>TASK NAME</p>
-      <input type="text" placeholder="Water plants">
+      <input type="text" id="task-name" placeholder="Water plants">
       <p>TASK DATE</p>
-      <!-- Add minimum and maximum dates. Min for now, max for future. -->
-      <input type="date" name="task-date" placeholder="20 Feb 2025">
-      <p>TASK SEVERITY</p>
-      <select name="task-severity" id="task-severity">
+      <input type="date" id="task-date">
+      <p>PRIORITY LEVEL</p>
+      <select name="task-priority" id="task-priority">
         <option value="" class="task-options-placeholder">Select severity &ast;</option>
-        <option value="high-severity">High</option>
-        <option value="medium-severity">Medium</option>
-        <option value="low-severity">Low</option>
+        <option name="high" value="High">High</option>
+        <option name="medium" value="Medium">Medium</option>
+        <option name="low" value="Low">Low</option>
       </select>
-      <button id="add-task-button" class="add-task-button">ADD TASK</button>
-    </div>
+      <button id="add-task-button" class="add-task-button">Add Task</button>
+    </form>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
