--- a/mainpage.html
+++ b/mainpage.html
@@ -14,18 +14,7 @@
     <div id="mainpage-container" class="mainpage-container">
       <h1 class="mainpage-title">To Do List</h1>
       <h3 class="mainpage-subtitle">This Week</h3>
-      <h4 class="mainpage-date">Monday, 12th May</h4>
-
-      <div class="task-container">
-        <div class="task-list">
-          <h1>Buy groceries</h1>
-          <h3>High</h3>
-        </div>
-        <div class="task-icons">
-          <img src="/todo-list/assets/icons/edit-task-icon.svg" alt="Edit Task">
-          <img src="/todo-list/assets/icons/delete-task-icon.svg" alt="Delete Task">
-        </div>
-      </div>
+      <h4 id="mainpage-date" class="mainpage-date">Monday, 12th May</h4>
 
       <div class="add-task-container">
         <img id="add-task" src="/todo-list/assets/icons/add-task-icon.svg" alt="Add Task">
