Sorting tasks by date

--- a/mainpage.html
+++ b/mainpage.html
@@ -13,8 +13,7 @@
   <div class="container-sm">
     <div id="mainpage-container" class="mainpage-container">
       <h1 class="mainpage-title">To Do List</h1>
-      <h3 class="mainpage-subtitle">This Week</h3>
-      <h4 id="mainpage-date" class="mainpage-date">Monday, 12th May</h4>
+      <h3 class="mainpage-subtitle" id="mainpage-subtitle">This Week</h3>
 
       <div class="add-task-container">
         <img id="add-task" src="/todo-list/assets/icons/add-task-icon.svg" alt="Add Task">
