Polishing edit task functionality

--- a/mainpage.html
+++ b/mainpage.html
@@ -33,7 +33,7 @@
         <option name="medium" value="Medium">Medium</option>
         <option name="low" value="Low">Low</option>
       </select>
-      <button id="add-task-button" class="add-task-button">Add Task</button>
+      <button id="task-action-button" class="task-action-button">Add Task</button>
     </form>
   </div>
   
