--- a/mainpage.html
+++ b/mainpage.html
@@ -35,6 +35,15 @@
       </select>
       <button id="task-action-button" class="task-action-button">Add Task</button>
     </form>
+
+    <!-- Modal for deleting tasks -->
+    <form method="dialog" id="delete-task-modal" class="delete-task-modal">
+      <p>Are you sure you want to delete this task?</p>
+      <div class="button-alignment">
+        <button id="confirm-button" class="confirm-button">Yes</button>
+        <button id="cancel-button" class="cancel-button">Cancel</button>
+      </div>
+    </form>
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
