Complete task functionality

--- a/mainpage.html
+++ b/mainpage.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <!-- Modal for adding tasks -->
+    <!-- Modal for adding/editing tasks -->
     <form method="dialog" id="add-task-modal" class="add-task-modal">
       <img src="/todo-list/assets/icons/close-icon.svg" id="close-icon" class="close-icon" alt="Close Task">
       <p>TASK NAME</p>
