--- a/mainpage.html
+++ b/mainpage.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
-  <link rel="stylesheet" href="/todo-list/styles/index.css">
-  <link rel="stylesheet" href="/todo-list/styles/mainpage.css">
+  <link rel="stylesheet" href="/styles/index.css">
+  <link rel="stylesheet" href="/styles/mainpage.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>To Do List</title>
 </head>
@@ -15,13 +15,13 @@
       <h1 class="mainpage-title" id="mainpage-title">To Do List</h1>
 
       <div class="add-task-container">
-        <img id="add-task" src="/todo-list/assets/icons/add-task-icon.svg" alt="Add Task">
+        <img id="add-task" src="/assets/icons/add-task-icon.svg" alt="Add Task">
       </div>
     </div>
 
     <!-- Modal for adding/editing tasks -->
     <form method="dialog" id="add-task-modal" class="add-task-modal">
-      <img src="/todo-list/assets/icons/close-icon.svg" id="close-icon" class="close-icon" alt="Close Task">
+      <img src="/assets/icons/close-icon.svg" id="close-icon" class="close-icon" alt="Close Task">
       <p>TASK NAME</p>
       <input type="text" id="task-name" placeholder="Water plants">
       <p>TASK DATE</p>
@@ -47,6 +47,6 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src="/todo-list/scripts/mainpage.js" type="module"></script>
+  <script src="/scripts/mainpage.js" type="module"></script>
 </body>
 </html>
